--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
+    compile 'com.truizlop.sectionedrecyclerview:library:1.2.0'
     testCompile 'junit:junit:4.12'
 }
