--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
     compile 'com.truizlop.sectionedrecyclerview:library:1.2.0'
+    compile 'com.github.clans:fab:1.6.4'
     testCompile 'junit:junit:4.12'
 }
